ArgoCD/templates/ArgoCDDestinationRule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: argocd-serve-originate-tls

spec:
  host: core-argocd-server
  trafficPolicy:
    tls:
      insecureSkipVerify: true
      mode: SIMPLE

    connectionPool:
      http:
        h2UpgradePolicy: UPGRADE
