ArgoCD/templates/ArgoCDGRPC.yaml
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: argocd-server-grpc

spec:
  hosts:
    - core-argocd-server-grpc.argocd.svc.k0s.resolvemy.host

  location: MESH_INTERNAL

  ports:
    - number: 8080
      name: https
      targetPort: 8080
      protocol: HTTPS

  resolution: STATIC
  workloadSelector:
    labels:
      app.kubernetes.io/instance: k0s-cntrl-argocd-helm
      app.kubernetes.io/name: argocd-server
