ArgoCD/templates/ArgoCDGRPCDestinationRule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: argocd-server-grpc-http2

spec:
  host: core-argocd-server-grpc

  trafficPolicy:
    connectionPool:
      http:
        h2UpgradePolicy: UPGRADE

    tls:
      insecureSkipVerify: true
      mode: SIMPLE
