ArgoCD/templates/BackendTrafficPolicy.yaml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: argocd

spec:
  targetRef:
    group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: argocd-server
  compression:
    - type: Brotli
    - type: Gzip
