ArgoCD/templates/GRPCRoute.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: GRPCRoute
metadata:
  name: argocd-route
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      namespace: kuadrant-core-prod
      name: main-gw

  hostnames:
    - argo.writemy.codes
  rules:
    - matches:
        - headers:
            - type: RegularExpression
              name: Content-Type
              value: ^application/grpc.*$
      backendRefs:
        - name: argocd-server
          port: 443
